# Project-001

./: .gitignore  DOCS.md  GUIDE.md  README.md  build_exe.py  categories_rows.csv  centre_rows.csv  clients_rows.csv  commandes_rows.csv  entrees_stock_rows.csv  informations_employees_rows.csv  ingredients_rows.csv  launch_mafalia_code.py  menus_rows.csv  payment_methods_rows.csv  produits_commandes_rows.csv  produits_rows.csv  promotions_rows.csv  pyproject.toml  requirements.txt  restaurants_rows.csv  run_api.py  run_cli.py  run_mafalia_code.py  run_mcp.py  sorties_stock_rows.csv  tags_rows.csv  test_config_validation.py  test_supabase_config.py  transactions_rows.csv  variants_produits_rows.csv  verify_agent_data.py
.claude/: settings.local.json
.github/workflows/: ci.yml
dashboard/: index.html
mafalia_agents/: __init__.py  agents.py  orchestrator.py  prompts.py  skills.py
mafalia_api/: __init__.py  api.py  models.py
mafalia_cli/: __init__.py  cli.py
mafalia_code/: BUILD.md  __init__.py  app.py  bridge_api.py  config.py  index.html  llm.py  main.py  package.json  supabase_setup.sql  system_prompt.py  tailwind.config.js  tools.py  tsconfig.electron.json
mafalia_code/electron/: main.ts  preload.ts
mafalia_code/src/: App.tsx  EcosystemApp.tsx  SimpleApp.tsx  api.ts  index.css  llmApi.ts  mafaliaApi.ts  main.tsx  supabase.ts  supabaseData.ts  types.ts
mafalia_desktop/: app.py
mafalia_knowledge/: __init__.py  custom_knowledge.json  graphify_integration.py  knowledge_base.py  memory.py  mempalace_integration.py
mafalia_mcp/: __init__.py  executor.py  server.py  tools.py
mafalia_web/: .gitignore  README.md  middleware.ts  package.json  tailwind.config.ts
mafalia_web/app/: globals.css  layout.tsx  page.tsx
mafalia_web/components/: theme-toggle.tsx  workspace.tsx
mafalia_web/lib/: agents.ts  config-store.ts  constants.ts  i18n.ts  llm-api.ts  metrics-fetch.ts  types.ts  utils.ts  voice.ts
tests/: __init__.py  test_agents.py  test_api.py  test_knowledge.py  test_orchestrator.py  test_prompts.py  test_skills.py
(+53 files in other folders)
