[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mafalia-ai"
version = "1.0.0"
description = "10 specialized AI agents covering 20 products across 4 verticals for Mafalia ecosystem"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "utachicodes"},
]
keywords = ["ai", "agents", "mcp", "business-intelligence", "mafalia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
    "mcp>=1.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.6.0",
    "prompt-toolkit>=3.0.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
mafalia-api = "run_api:main"
mafalia-cli = "mafalia_cli.cli:main"
mafalia-mcp = "mafalia_mcp.server:main"

[project.urls]
Homepage = "https://github.com/utachicodes/Project-001"
Repository = "https://github.com/utachicodes/Project-001"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["mafalia_agents*", "mafalia_api*", "mafalia_cli*", "mafalia_mcp*", "mafalia_knowledge*"]
